refactor: folder owns its sub-folder list; worlds are a set
setParent and the constructor reached into another FolderImpl's private
subfolders field through a downcast, mutating a sibling's state directly.
Route it through package-private addSubFolder/removeSubFolder so a folder
maintains its own list and enforces de-duplication, and defensively copy the
subfolders the constructor is handed (worlds already were copied).

Back the world membership with a LinkedHashSet instead of a List guarded by a
manual contains check — uniqueness is the intent, insertion order is preserved,
and addWorld drops the guard.